--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,16 @@
-<div class="card border border-info col-md-5">
+<P></P>
+<div class="card col-md-5">
   <div class="card-body">
-    <p class="text-danger">{{messageError}} <span *ngIf="messageError" class="fa fa-smile-o"></span></p>
     <form #f="ngForm" (ngSubmit)="onLogin(f.value)">
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" class="form-control" ngModel>
+        <label for="username" >Username</label>
+        <input type="text" class="form-control " name="username" ngModel>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="text" name="password" id="password" class="form-control" ngModel>
+        <input type="text" class="form-control" name="password" ngModel>
       </div>
-      <button class="btn btn-sm btn-primary" type="submit">Login</button>
+      <button class="btn btn-sm btn-info" type="submit">Login</button>
     </form>
   </div>
 </div>
